# liblcvm

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  policy.Makefile
autogen/antlr-gen/: rules.interp  rules.tokens  rulesBaseListener.cpp  rulesBaseListener.h  rulesBaseVisitor.cpp  rulesBaseVisitor.h  rulesLexer.cpp  rulesLexer.h  rulesLexer.interp  rulesListener.cpp  rulesListener.h  rulesParser.cpp  rulesParser.h  rulesVisitor.cpp  rulesVisitor.h
autogen/protobuf-gen/: rules.pb.cc  rules.pb.h
include/: config.h.in  lcvm.h  liblcvm.h  liblcvm_c.h
lib/: isobmff.patch
policy/: .gitignore  Makefile  README.md  antlr.main.cpp  antlr.protovisitor.cpp  antlr.protovisitor.h  example.txt  input.txt  rules.g4  rules.proto
python/: lcvm.py
src/: liblcvm.cc  liblcvm_c_impl.cpp  policy_protovisitor.cc  policy_runner.cc  python_binding.cc  python_bindings.cc
test/: CMakeLists.txt  liblcvm_conformance_test.cc  liblcvm_memory_test.cc  liblcvm_unittest.cc  policy_runner_unittest.cc
tools/: lcvm.cc
